<resources>
    <string name="app_name">Login</string>
    <string name="has_account">¿Tienes cuenta?</string>
    <string name="login">Login</string>
    <string name="register">Registrar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username">Nombre de usuario</string>
    <string name="password">Contraseña</string>
    <string name="email">Email</string>
</resources>